# plg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
app/: CMakeLists.txt
app/src/: constants.hpp  dependency.hpp  lib.cpp  lib.hpp  main.cpp  module.cpp  module.hpp  pack.cpp  pack.hpp  parsing.cpp  parsing.hpp  version.cpp  version.hpp
benchmarks/: CMakeLists.txt
benchmarks/src/: app.cpp
cmake/: dependencies.cmake
cmake/toolchains/: clang-x86_64-linux-llvm.cmake  clang-x86_64-windows-llvm.cmake  gcc-x86_64-windows-mingw.cmake
core/: CMakeLists.txt
core/input/: CMakeLists.txt
core/input/src/: input.cpp
core/rendering/: CMakeLists.txt  manifest.toml
core/rendering/src/: assets.cpp  assets.hpp  components.hpp  initialization.cpp  initialization.hpp  rendering.cpp  vma.cpp
sdk/: CMakeLists.txt
sdk/include/plg/: logging.hpp  sdk.hpp
sdk/include/sdk/: sdk.hpp
sdk/src/: sdk.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/modules/nspace1/testmod1/: manifest.toml
tests/integration/modules/nspace2/testmod2/: manifest.toml
tests/integration/modules/testmod1/: manifest.json  manifest.toml
tests/integration/modules/testmod2/: manifest.json  manifest.toml
tests/integration/packs/test/: pack1.toml  pack2.toml
tests/integration/src/: app_tests.cpp  testmod.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: app_tests.cpp  sdk_tests.cpp
